--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Ecoleta</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
-    <!-- tempo de vídeo 1:31:51 -->
     <div id="page-home">
-
         <div class="content">
             <header>
                 <img src="images/logo.svg" alt="Logo">
@@ -24,12 +23,9 @@
                 <h1>Seu marketplace de coleta de resíduos</h1>
                 <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
                 <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
-            </main>
-                      
+            </main>     
         </div>
-
     </div>
-   
 
     
 </body>
