Ajuste JS no form

--- a/create-point/index.html
+++ b/create-point/index.html
@@ -69,6 +69,6 @@
                 </form>
         </div>
     
-        
+        <script src="../javascript/create-point.js"></script>
     </body>
 </html>
