--- a/create-point/index.html
+++ b/create-point/index.html
@@ -28,30 +28,30 @@
                         
                         <div class="field">
                             <label for="name">Nome da entidade</label>
-                            <input type="text" name="name">
+                            <input type="text" name="name" required>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
                                 <label for="address">Endereço</label>
-                                <input type="text" name="address">
+                                <input type="text" name="address" required>
                             </div>
                             <div class="field">
                                 <label for="address2">Número/Complemento</label>
-                                <input type="text" name="address2">
+                                <input type="text" name="address2" required>
                             </div>
                         </div>
 
                         <div class="field-group">
                             <div class="field">
                                 <label for="uf">Estado</label>
-                                <select name="uf">
+                                <select name="uf" required>
                                     <option value="">Selecione o Estado</option>
                                 </select>
                             </div>
                             <div class="field">
                                 <label for="city">Cidade</label>
-                                <select name="city" disabled>
+                                <select name="city" disabled required>
                                     <option value="">Selecione a Cidade</option>
                                 </select>
                             </div>
@@ -63,6 +63,38 @@
                         <legend>
                             <h2>Itens de coleta</h2>
                         </legend>
+
+                        <div class="itens-grid">
+                            <li data-id="1">
+                                <img src="../images/lampadas.svg" alt="Lâmpadas">
+                                <span>Lâmpadas</span>
+                            </li>
+
+                            <li data-id="2">
+                                <img src="../images/baterias.svg" alt="Pilhas e Baterias">
+                                <span>Pilhas e Baterias</span>
+                            </li>
+
+                            <li data-id="3">
+                                <img src="../images/papeis-papelao.svg" alt="Papéis e Papelão">
+                                <span>Papéis e Papelão</span>
+                            </li>
+
+                            <li data-id="4">
+                                <img src="../images/eletronicos.svg" alt="Resíduos Eletrônicos">
+                                <span>Resíduos Eletrônicos</span>
+                            </li>
+
+                            <li data-id="5">
+                                <img src="../images/organicos.svg" alt="Resíduos Orgânicos">
+                                <span>Resíduos Orgânicos</span>
+                            </li>
+
+                            <li data-id="6">
+                                <img src="../images/oleo.svg" alt="Óleo de Cozinha">
+                                <span>Óleo de Cozinha</span>
+                            </li>
+                        </div>
                     </fieldset>
 
                     <button type="submit">Cadastrar ponto de coleta</button>
