Finalização da página de busca

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="content">
             <header>
                 <img src="images/logo.svg" alt="Logo">
-                <a href="#">
+                <a href="create-point/">
                 <span></span>
                 Cadastre um ponto de coleta</a>
             </header>
@@ -34,7 +34,7 @@
                 <h1>Pontos de Coleta</h1>
                 <a href="#">Fechar</a>
             </div>
-            <form action="">
+            <form action="results/">
                 <label for="search">Cidade ou Estado</label>
                 <div class="search field">
                     <input type="text" name="search" placeholder="Digite a Cidade ou o Estado">
