--- a/create-point/index.html
+++ b/create-point/index.html
@@ -14,7 +14,7 @@
         <div id="page-create-point">
                 <header>
                     <img src="../images/logo.svg" alt="Logo">
-                    <a href="#">
+                    <a href="../index.html">
                     <span></span>
                     Voltar para a home</a>
                 </header>
