--- a/create-point/index.html
+++ b/create-point/index.html
@@ -64,37 +64,7 @@
                             <h2>Itens de coleta</h2>
                         </legend>
 
-                        <div class="itens-grid">
-                            <li data-id="1">
-                                <img src="../images/lampadas.svg" alt="Lâmpadas">
-                                <span>Lâmpadas</span>
-                            </li>
-
-                            <li data-id="2">
-                                <img src="../images/baterias.svg" alt="Pilhas e Baterias">
-                                <span>Pilhas e Baterias</span>
-                            </li>
-
-                            <li data-id="3">
-                                <img src="../images/papeis-papelao.svg" alt="Papéis e Papelão">
-                                <span>Papéis e Papelão</span>
-                            </li>
-
-                            <li data-id="4">
-                                <img src="../images/eletronicos.svg" alt="Resíduos Eletrônicos">
-                                <span>Resíduos Eletrônicos</span>
-                            </li>
-
-                            <li data-id="5">
-                                <img src="../images/organicos.svg" alt="Resíduos Orgânicos">
-                                <span>Resíduos Orgânicos</span>
-                            </li>
-
-                            <li data-id="6">
-                                <img src="../images/oleo.svg" alt="Óleo de Cozinha">
-                                <span>Óleo de Cozinha</span>
-                            </li>
-                        </div>
+                        <div class="itens-grid"></div>
 
                         <input type="hidden" name="itens">
                     </fieldset>
@@ -103,6 +73,7 @@
                 </form>
         </div>
     
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="../javascript/create-point.js"></script>
     </body>
 </html>
