--- a/create-point/index.html
+++ b/create-point/index.html
@@ -19,7 +19,7 @@
                     Voltar para a home</a>
                 </header>
 
-                <form action="">
+                <form>
                     <h1>Cadastro do ponto de coleta</h1>
                     <fieldset>
                         <legend>
