--- a/results/index.html
+++ b/results/index.html
@@ -21,34 +21,15 @@
 
                 <main>
                     <h4>
-                        <strong>2 pontos</strong> encontrados
+                        <strong> <span id="pontos"></span> ponto(s)</strong> encontrado(s)
                     </h4>
 
-                    <div class="cards">
-                        <div class="card">
-                            <div class="image"></div>
-                            <h1>Colectoria</h1>
-                            <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-                            <p>
-                                Rio do Sul, Santa Catarina <br/>
-                                Guilherme Gemballa, Jardim América <br/>
-                                Nº 260
-                            </p>
-                        </div>
-
-                        <div class="card">
-                            <div class="image"></div>
-                            <h1>Papersider</h1>
-                            <h3>Papéis e Papelão</h3>
-                            <p>
-                                Rio do Sul, Santa Catarina <br/>
-                                Guilherme Gemballa, Jardim América <br/>
-                                Nº 260
-                            </p>
-                        </div>
-                    </div>
+                    <div class="cards"></div>
                 </main>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="../javascript/results.js"></script>
     
     </body>
 </html>
